fix: invisible background

--- a/src/components/input-bar/input-bar.css
+++ b/src/components/input-bar/input-bar.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   background-color: rgb(32, 32, 32);
   background-color: rgb(32, 32, 32);
-}
+} */
 .field {
   display: flex;
   /* flex-direction: column; */
@@ -86,6 +86,7 @@ body {
 
   border-radius: 10px;
   color: white;
+  background-color: rgb(19,19,19);
 }
 .radio-field {
   display: flex;
